--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
         <header class="app-header">
             <h1>FlowChat</h1>
             <div class="header-actions">
-                <button id="exportBtn" class="btn btn-primary">Export as PNG</button>
-                <button id="clearBtn" class="btn btn-secondary">Clear Canvas</button>
+                <div class="action-group">
+                    <button id="undoBtn" class="btn btn-icon" title="Undo (Ctrl+Z)">
+                        <svg viewBox="0 0 24 24" width="20" height="20">
+                            <path fill="currentColor" d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"/>
+                        </svg>
+                    </button>
+                    <button id="redoBtn" class="btn btn-icon" title="Redo (Ctrl+Y)">
+                        <svg viewBox="0 0 24 24" width="20" height="20">
+                            <path fill="currentColor" d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16c1.05-3.19 4.05-5.5 7.6-5.5 1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="zoom-controls">
+                    <button id="zoomOutBtn" class="btn btn-icon" title="Zoom Out">−</button>
+                    <span id="zoomLevel" class="zoom-level">100%</span>
+                    <button id="zoomInBtn" class="btn btn-icon" title="Zoom In">+</button>
+                    <button id="zoomResetBtn" class="btn btn-secondary btn-sm">Reset</button>
+                </div>
+                <div class="action-group">
+                    <button id="exportBtn" class="btn btn-primary">Export as PNG</button>
+                    <button id="embedBtn" class="btn btn-primary">Embed Code</button>
+                    <button id="clearBtn" class="btn btn-secondary">Clear Canvas</button>
+                </div>
             </div>
         </header>
 
@@ -107,6 +128,9 @@
     <script src="js/connectors.js"></script>
     <script src="js/properties.js"></script>
     <script src="js/export.js"></script>
+    <script src="js/history.js"></script>
+    <script src="js/zoom.js"></script>
+    <script src="js/embed.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
