--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlowChat - Flowchart Drawing Tool</title>
+    <title>Flowchart.dev - Flowchart Drawing Tool</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/toolbar.css">
     <link rel="stylesheet" href="styles/canvas.css">
@@ -13,7 +13,7 @@
     <div class="app-container">
         <!-- Header -->
         <header class="app-header">
-            <h1>FlowChat</h1>
+            <h1>flowchart.dev</h1>
             <div class="header-actions">
                 <div class="action-group">
                     <button id="undoBtn" class="btn btn-icon" title="Undo (Ctrl+Z)">
