Add social tags.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flowchart.dev - Flowchart Drawing Tool</title>
+
+        <!-- Google Search Meta Tags -->
+    <meta name="description" content="Flowchart.dev is a modern flowchart drawing tool. Create, edit, and export flowcharts easily online.">
+    <meta name="keywords" content="flowchart, diagram, drawing tool, online, process, chart, export, svg, png">
+    <meta name="author" content="Flowchart.dev">
+
+    <!-- Facebook Open Graph Meta Tags -->
+    <meta property="og:title" content="Flowchart.dev - Flowchart Drawing Tool">
+    <meta property="og:description" content="Create, edit, and export flowcharts easily online with Flowchart.dev.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://flowchart.dev/">
+    <meta property="og:image" content="https://flowchart.dev/assets/flowchartdev-social.png">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Flowchart.dev - Flowchart Drawing Tool">
+    <meta name="twitter:description" content="Create, edit, and export flowcharts easily online with Flowchart.dev.">
+    <meta name="twitter:image" content="https://flowchart.dev/assets/flowchartdev-social.png">
+
+
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/toolbar.css">
     <link rel="stylesheet" href="styles/canvas.css">
